# twitch-thingies

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
bot/: Cargo.toml  settings.rs
bot/src/: db.rs  error.rs  main.rs  runner.rs  settings.rs
db/: Cargo.toml
db/src/: lib.rs
sql-migrations/: Cargo.toml
sql-migrations/migrations/: 1__initial.sql  2__commands.sql  3__add_channel_to_commands.sql
sql-migrations/src/: main.rs
