[package]
name = "tashbot"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql_async = { version = "0.31", default-features = false, features = ["default-rustls"] }
tokio = {version = "1", features = ["full"]}
irc = { version = "0.15", default-features = false, features = ["ctcp", "tls-rust", "toml_config"]}
irc-proto = "0.15"
config = "0.13"
serde = "1"
futures-util = "0.3"
thiserror = "1"
tracing = "0.1"
clap = "4"
warp = "0.3" 
