[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql_async = { version = "0.31", default-features = false, features = ["default-rustls"] }
tokio = {version = "1", features = ["full"]}
